Llangattock subsections renamed to Table of Contents.  Page icon behind folio count implemented.  Fix so that the demo page will work again.

--- a/web/css/brokenbooks.css
+++ b/web/css/brokenbooks.css
@@ -605,14 +605,16 @@ and open the template in the editor.
                 position: absolute;
                 bottom: 6px;
                 right: 3px;
-                height: 20px;
+                height: 25px;
                 width: 20px;
                 /*border: 1px solid blue;*/
             }
             
             .folioCount img{
-                height: 18px;
-                width: 18px;
+                    height: 27px;
+                    width: 31px;
+                    position: absolute;
+                    right: -4px;
             }
 
             .arrangeSection{
@@ -955,5 +957,26 @@ and open the template in the editor.
             .dropColor{
                 color: white;
                 background-color: rgb(53,15,191);
+            }
+            .countInt{
+                position: absolute;
+                z-index: 2;
+                color: black;
+                font-size: 18px;
+                /* margin: 0px auto; */
+                display: block;
+                right: 0;
+                left: 0;
+                margin: 0px auto;
+                height: auto;
+                width: auto;
+                top: 4px;
+            }
+            .pageIcon{
+                height: 35px !important;
+                width: 28px !important;
+                right: -3px !important;
+                top: -7px !important;
+                position: absolute;
             }
             
